--- a/wiki/CreateaModelinEA.wiki
+++ b/wiki/CreateaModelinEA.wiki
@@ -31,4 +31,4 @@ The VIENNA Add-In is an extension to the UML modeling tool Enterprise Architect 
 
 [ImportStandardCCLibraries Import standard CC Libraries into an existing UPCC3 model]
 
-[HowToVideos Getting Started Videos]
+[GettingStartedVideos Getting Started Videos]: This page contains a few videos explaining common tasks using the VIENNA Add-In
