Edited wiki page through web user interface.

--- a/wiki/CreateyourownBdts.wiki
+++ b/wiki/CreateyourownBdts.wiki
@@ -37,12 +37,12 @@ http://vienna-add-in.googlecode.com/svn/wiki/images/CreateyourownBdts_07.gif
 (2) CCTS standard http://www.untmg.org/wp-content/uploads/2008/06/specification_ccts3p0odp620080207.pdf
 
 =Related Tasks=
-[CreateaModelinEA Create a model in Enterprise Architect]
+[CreateaModelinEA Create a model in Enterprise Architect]: This page explains how to open a project file and create a model in Enterprise Architect
 
-[CreateaModelinEA Create your first UPCC model]
+[CreateaUpccModel Create your first UPCC model]: This page explains how to create a UPCC model
 
-[ImportStandardCCLibraries Import standard CC Libraries into an existing UPCC3 model]
+[ImportStandardCCLibraries Import standard CC Libraries]: This page explains how to download and import standard Core Component Libraries into an existing UPCC3 model
 
-[CreateyourownAbies Create your own ABIEs]
+[CreateyourownAbies Create your own ABIEs]: This page explains how to create ABIEs using the _ABIE Editor_
 
-[HowToVideos Getting Started Videos]
+[GettingStartedVideos Getting Started Videos]: This page contains a few videos explaining common tasks using the VIENNA Add-In
