--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -18,7 +18,6 @@
     * [Meetings Meeting Notes]
     * [ReSharperSettings]
   * [RoadMap]
-  * [Presentation VIENNA AddIn Presentation]
-
-
-  
+  * [Storyboards VIENNA AddIn Presentation]
+    * [Presentation VIENNA AddIn Tool Presentation]
+    * [PassportModel VIENNA AddIn Passport Modeling Presentation]
