--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -18,6 +18,6 @@
     * [Meetings Meeting Notes]
     * [ReSharperSettings]
   * [RoadMap]
-  * [Storyboards VIENNA AddIn Storyboards]
+  * [Storyboards Storyboards]
     * [Presentation VIENNA AddIn Tool Presentation]
     * [PassportModel VIENNA AddIn Passport Modeling Presentation]
