Edited wiki page through web user interface.

--- a/wiki/PassportModel.wiki
+++ b/wiki/PassportModel.wiki
@@ -1,5 +1,5 @@
-#summary One-sentence summary of this page.
+#summary Storyboard for modeling typical Passport Information using the VIENNA Add-In.
 
-= test =
+= Storyboard =
 
 dummy
