Edited wiki page through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -20,4 +20,4 @@
   * [RoadMap]
   * [Storyboards Storyboards]
     * [Presentation VIENNA AddIn Tool Presentation]
-    * [PassportModel VIENNA AddIn Passport Modeling Presentation]
+    * [PassportModel VIENNA AddIn Passport Modeling]
