Edited wiki page through web user interface.

--- a/wiki/PassportModel.wiki
+++ b/wiki/PassportModel.wiki
@@ -4,4 +4,8 @@
 
   # Create a new project in Enterprise Architect named "passport_model.eap".
   # Define the project as a UMM2/UPCC3 Model.
-  # Launch the "Default UPCC Model Creator" Wizard and create a default model named "Passport Model". Furthermore, use the wizard to import the standard Core Component Library having the major version "democcl" and the minor version "2".
+  # Launch the "Default UPCC Model Creator" wizard and create a default model named "Passport Model". Furthermore, use the wizard to import the standard Core Component Library having the major version "democcl" and the minor version "2".
+  # Launch the "ABIE Editor" wizard and create the following ABIEs in the order listed
+    # a
+    # b
+  # another
