--- a/wiki/PassportModelStep2.wiki
+++ b/wiki/PassportModelStep2.wiki
@@ -9,16 +9,24 @@ In the _ABIE Editor_, create the following ABIEs in the order listed. Note that 
   # ABIE _Address_
     * Choose the ACC _Address_:
       http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild11.gif
-    * Check the BCC _BuildingNumber _ :
+    * Check the BCC _BuildingNumber_:
       http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild12.gif
     * Rename the BDT from _New1Text_ to _Text_:
       http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild13.gif
       http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild14.gif
-    * Check the BCC _CityName_
-    * Check the BCC _CountryName_
-    * Check the BCC _Postcode_ and rename the BDT from _New1Code_ to _Code_
-    * Check the BCC _StreetName_
-    * Click _Create ABIE_
+    * Check the BCC _CityName_:
+      http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild15.gif
+    * Check the BCC _CountryName_:
+      http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild16.gif
+    * Check the BCC _Postcode_:
+      http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild17.gif
+    * Rename the BDT from _New1Code_ to _Code_:
+      http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild18.gif
+      http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild19.gif
+    * Check the BCC _StreetName_:
+      http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild20.gif
+    * Click _Create ABIE_:
+      http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild21.gif
   # ABIE "Country"
     * Choose the ACC "Country"
     * Check the BCC "Identification" and rename the BDT from "New1Identifier" to "Identifier"
