--- a/wiki/PassportModelStep2.wiki
+++ b/wiki/PassportModelStep2.wiki
@@ -2,7 +2,7 @@
 
 = Step 2 - Create ABIEs =
 
-In the project browser, right-click the BIELibrary and select _Add-Ins / VIENNAAddIn / Create new ABIE_ to launch the _ABIE Editor_ wizard:
+In the Project Browser, right-click the BIELibrary and select _Add-Ins / VIENNAAddIn / Create new ABIE_ to launch the _ABIE Editor_ wizard:
 http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild10.gif
 
 In the _ABIE Editor_, create the following ABIEs in the order listed. Note that the ABIEs are created based on the Core Components imported in previous step. It is also necessary to create appropriate BDTs. In the following all necessary steps are listed. 
@@ -27,6 +27,11 @@ In the _ABIE Editor_, create the following ABIEs in the order listed. Note that 
       http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild20.gif
     * Click _Create ABIE_:
       http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild21.gif
+    * A confirmation message shows that the ABIE was created successfully:
+      http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild22.gif
+    * In the Project Browser you can see that the ABIE including all BBIEs was created as member of the BIELibrary:
+      http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild23.gif
+
   # ABIE "Country"
     * Choose the ACC "Country"
     * Check the BCC "Identification" and rename the BDT from "New1Identifier" to "Identifier"
