--- a/wiki/PassportModelStep2.wiki
+++ b/wiki/PassportModelStep2.wiki
@@ -48,7 +48,7 @@ In the _ABIE Editor_, create the following ABIEs in the order listed. Note that 
       http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild29.gif
     * Check the BCC _Start_:
       http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild30.gif
-    * Rename the BBIE from _Start_ to _'DateOfIssue_Start'_:
+    * Rename the BBIE from _Start_ to _`DateOfIssue_Start`_:
       http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild31.gif
     * Click _Create ABIE_
   # ABIE "Person"
