--- a/wiki/PassportModelStep2.wiki
+++ b/wiki/PassportModelStep2.wiki
@@ -48,22 +48,29 @@ In the _ABIE Editor_, create the following ABIEs in the order listed. Note that 
       http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild29.gif
     * Check the BCC _Start_:
       http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild30.gif
-    * Rename the BBIE from _Start_ to _`DateOfIssue_Start`_:
+    * Rename the BBIE from _Start_ to _DateOfIssue_Start_:
       http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild31.gif
     * Click _Create ABIE_
-  # ABIE "Person"
-    * Choose the ACC "Person"
-    * Check the BCC "Birth"
-    * Check the BCC "BirthCountry"
-    * Check the BCC "EyeColor" 
-    * Check the BCC "Gender"
-    * Check the BCC "GivenName"
-    * Check the BCC "Height" and rename the BDT from "New1Measure" to "Measure"
-    * Check the BCC "Name" and rename the BBIE from "Name" to "SurName_Name"
-    * Check the BCC "Passport" and add as well as check two additional BBIEs. Now rename the first BBIE from "Passport" to "Code_Passport", the second BBIE from "New1Passport" to "Number_Passport", and the third BBIE from "New2Passport" to "Type_Passport". 
-    * Switch to the Associations Tab and for the ABIE "Country" check the ASBIE "Nationality" and for the ABIE "Address" check the ASBIE "Residence". 
-    * Click "Create ABIE"
-
-
-
-    http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild09.gif
+  # ABIE _Person_
+    * Choose the ACC _Person_
+    * Check the BCC _Birth_
+    * Check the BCC _BirthCountry_
+    * Check the BCC _EyeColor_ 
+    * Check the BCC _Gender_
+    * Check the BCC _GivenName_
+    * Check the BCC _Height_ and rename the BDT from _New1Measure_ to _Measure_
+    * Check the BCC _Name_ and rename the BBIE from _Name_ to _SurName_Name_
+    * Check the BCC _Passport_:
+      http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild32.gif
+    * Add as well as check two additional BBIEs:
+      http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild33.gif
+      http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild34.gif
+    * Now rename the first BBIE from _Passport_ to _Code_Passport_, the second BBIE from _New1Passport_ to _Number_Passport_, and the third BBIE from _New2Passport_ to _Type_Passport_:
+      http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild35.gif
+    * Switch to the Associations Tab:
+      http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild36.gif
+    * For the ABIE _Country_ check the ASBIE _Nationality_:
+      http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild37.gif
+    * For the ABIE _Address_ check the ASBIE _Residence_:
+      http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild38.gif
+    * Click _Create ABIE_
