Edited wiki page through web user interface.

--- a/wiki/PassportModelStep2.wiki
+++ b/wiki/PassportModelStep2.wiki
@@ -81,8 +81,8 @@ In the _ABIE Editor_, create the following ABIEs in the order listed. Note that 
 
 [PassportModelStep3 Passport Modeling - Continue with step 3]: This page explains how to create associations inside the passport model
 
+----
+
 = Related Tasks =
 
-[CreateaModelinEA Create a model in Enterprise Architect]: This page explains how to open a project file and create a model in Enterprise Architect
-
-[ImportStandardCCLibraries Import standard CC Libraries]: This page explains how to download and import standard Core Component Libraries into an existing UPCC3 model
+[CreateyourownAbies Create your own ABIEs]: This page explains how to create ABIEs using the _ABIE Editor_
