--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -21,3 +21,8 @@
   * [Storyboards Storyboards]
     * [Presentation VIENNA AddIn Tool Presentation]
     * [PassportModel VIENNA AddIn Passport Modeling]
+      * [PassportModelStep0 Introduction]
+      * [PassportModelStep1 Step 1 - Create a UPCC model & Import CC Libraries]
+      * [PassportModelStep2 Step 2 - Create ABIEs]
+      * [PassportModelStep3 Step 3 - Model associations]
+      * [PassportModelStep4 Outlook]
