--- a/wiki/PassportModelStep4.wiki
+++ b/wiki/PassportModelStep4.wiki
@@ -2,5 +2,4 @@
 
 = Outlook =
 
-  # Open the _DOCLibrary_ by doucle-clicking it in the Project Browser:
-    http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild39.gif
+The Enterprise Architect project file should now contain the complete passport model. For example, look at [http://umm-dev.org/wp-content/videos/tool-demo-4.htm this video] for further information about how to generate XML schema files from core component models.
