--- a/wiki/PassportModelStep3.wiki
+++ b/wiki/PassportModelStep3.wiki
@@ -11,9 +11,9 @@
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild42.gif
   # The DOCLibrary canvas should now contain the four ABIEs, including the associating ASBIEs:
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild43.gif
-  # If the _UPCC DOCLibrary_ toolbox is not visible, load it by clicking the _More tools..._ button
+  # If the _UPCC DOCLibrary_ toolbox is not visible, load it by clicking the _More tools..._ button...
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild44.gif
-    and choosing _UPCC 3.0 / UPCC3 - DOCLIbrary Abstract Syntax_ from the menu:
+  # ...and choose _UPCC 3.0 / UPCC3 - DOCLIbrary Abstract Syntax_ from the menu:
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild45.gif
   # From the toolbox drag-and-drop the UPCC Artefact _MA_ onto the canvas
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild46.gif
