--- a/wiki/PassportModelStep3.wiki
+++ b/wiki/PassportModelStep3.wiki
@@ -15,7 +15,7 @@
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild44.gif
   # ...and choose _UPCC 3.0 / UPCC3 - DOCLIbrary Abstract Syntax_ from the menu:
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild45.gif
-  # From the toolbox drag-and-drop the UPCC Artefact _MA_ onto the canvas
+  # From the toolbox, drag-and-drop the UPCC Artefact _MA_ onto the canvas
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild46.gif
   # Rename the newly created MA to _Passport_:
     http://vienna-add-in.googlecode.com/svn/wiki/PassportModel/Bild47.gif
